--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 *{
     padding: 0px;
     margin:  0px;
-    
+    /*border: solid 1px black;*/
 }
 body{
     background-color:rgb(254, 194, 0);
@@ -10,30 +10,27 @@ body{
 }
 
 
-header #menu ul #logo a img{
+header  #menu ul #logo a img{
     padding: 0;
     width: 100%;
     height: 600px;
 }
-header #menu  {
 
-
-}
-
-header #menu ul .menu2 ul{
+header  #menu ul .menu2 ul{
+    display:block;
     list-style: none;
     margin: 0;
     padding: 0;
 }
-header #menu ul .menu2 ul li{
+header  #menu ul .menu2 ul li{
     float: left;
 }
-header #menu ul .menu2 ul li a{
+header  #menu ul .menu2 ul li a{
     padding: 0;
     color: white;
     text-decoration:none;
     display:block;
-    padding: 12px 36px;
+    padding: 12px 30px;
     font-size: 18px;
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f85032+0,f16f5c+50,f6290c+51,f02f17+71,e73827+100;Red+Gloss+%231 */
 background: rgb(248,80,50); /* Old browsers */
@@ -42,7 +39,7 @@ background: -webkit-linear-gradient(top,  rgba(248,80,50,1) 0%,rgba(241,111,92,1
 background: linear-gradient(to bottom,  rgba(248,80,50,1) 0%,rgba(241,111,92,1) 50%,rgba(246,41,12,1) 51%,rgba(240,47,23,1) 71%,rgba(231,56,39,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#e73827',GradientType=0 ); /* IE6-9 */
 }
-header #menu ul .menu2 ul li a:hover{
+header  #menu ul .menu2 ul li a:hover{
     color:black;
     background: rgb(219, 115, 17);
     animation: 1s ms 1;
@@ -53,12 +50,54 @@ header #menu ul .menu2 ul li a:hover{
         transform:scale(1.6);
     }
 }
-header #menu ul #logo{
+header  #menu ul #logo{
     /*background-color: 	#fec200;*/
     width: 100%;
     height: 100%;
 }
-header #menu ul li a img{
+header  #menu ul li a img{
     width: 50%;
     padding-left: 20%;
+}
+/*formato de las criticas*/
+header #cuerpo .critica ul{
+    border: solid 1px black;
+    margin: 50px;
+    padding: 50px;
+    display: inline-block;
+}
+header #cuerpo .critica ul .imagen{
+    padding: 10px;
+    margin: 20px;
+
+}
+header #cuerpo  .critica .texto{
+    margin: 20px;
+    padding: 20px;
+}
+/*Boton de ir arriba*/
+div #boton{
+    align-items: left;
+}
+#boton{
+    width: 60px;
+    height: 60px;
+    background:#46a2fd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 50%;
+    font-size: 20px;
+    position: fixed;
+    bottom: 50px;
+    cursor: pointer;
+    border: 4px solid transparent;
+    transition: all 300ms ease;
+    transform: scale(0);
+    right: 50px
+}
+#boton:hover{
+    transform: scale(1.1);
+    border-color: rgba(0,0,0,0.1);
 }
