--- a/css/main.css
+++ b/css/main.css
@@ -10,35 +10,13 @@ body{
 }
 
 
-header  #menu ul #logo a img{
-    padding: 0;
+#barra{
+    padding: 20px;
     width: 100%;
-    height: 600px;
+    background-color: rgb(254, 194, 0);
 }
 
-header  #menu ul .menu2 ul{
-    display:block;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-header  #menu ul .menu2 ul li{
-    float: left;
-}
-header  #menu ul .menu2 ul li a{
-    padding: 0;
-    color: white;
-    text-decoration:none;
-    display:block;
-    padding: 12px 30px;
-    font-size: 18px;
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f85032+0,f16f5c+50,f6290c+51,f02f17+71,e73827+100;Red+Gloss+%231 */
-background: rgb(248,80,50); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(248,80,50,1) 0%, rgba(241,111,92,1) 50%, rgba(246,41,12,1) 51%, rgba(240,47,23,1) 71%, rgba(231,56,39,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(248,80,50,1) 0%,rgba(241,111,92,1) 50%,rgba(246,41,12,1) 51%,rgba(240,47,23,1) 71%,rgba(231,56,39,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(248,80,50,1) 0%,rgba(241,111,92,1) 50%,rgba(246,41,12,1) 51%,rgba(240,47,23,1) 71%,rgba(231,56,39,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#e73827',GradientType=0 ); /* IE6-9 */
-}
+
 header  #menu ul .menu2 ul li a:hover{
     color:black;
     background: rgb(219, 115, 17);
