--- a/css/main.css
+++ b/css/main.css
@@ -4,18 +4,21 @@
     /*border: solid 1px black;*/
 }
 body{
-    background-color:rgb(254, 194, 0);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
-
-
-#barra{
+#criticas{
+    padding-left:250px ;
+}
+/*#barra{
     padding: 20px;
     width: 100%;
     background-color: rgb(254, 194, 0);
+}*/
+#carouselExampleSlidesOnly{
+    width: 75%;
+    padding-left: 300px;
 }
-
 
 header  #menu ul .menu2 ul li a:hover{
     color:black;
@@ -78,4 +81,7 @@ div #boton{
 #boton:hover{
     transform: scale(1.1);
     border-color: rgba(0,0,0,0.1);
+}
+#buscador{
+    padding-left: 20%;
 }
